<resources>
    <string name="app_name">Spain in a Day</string>
    <string name="spain">Spain</string>
    <string name="in_a">in a</string>
    <string name="day">day</string>
    <string name="usuario">Cuenta de correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="datos_validos">Por favor, introduzca datos de acceso válidos</string>
    <string name="datos_validos_video">Por favor, introduzca toda la información</string>
    <string name="codigo_error_nombre">El campo nombre no puede estar vacío</string>
    <string name="codigo_error_apellidos">El campo apellidos no puede estar vacío</string>
    <string name="codigo_error_correo">Debe introducir una cuenta de correo válida</string>
    <string name="codigo_error_fecha_nacimiento">Debe introducir una fecha de nacimiento válida (Ej: 31/12/1950)</string>
    <string name="codigo_error_telefono">Debe introducir un teléfono válido</string>
    <string name="codigo_error_contrasena">Debe introducir una contraseña de más de 6 caracteres que contenga al menos una letra mayúscula, una letra minúscula y un dígito</string>
    <string name="codigo_error_titulo">El campo título no puede estar vacío</string>
    <string name="codigo_error_descripcion">El campo descripción no puede estar vacío</string>
    <string name="registrate">Regístrate</string>
    <string name="registro">Registro</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="entra">Entra</string>
    <string name="salir">Salir</string>
    <string name="mis_videos">Mis videos</string>
    <string name="mis_videos_large">Todos en un mismo sitio</string>
    <string name="enviar_video">Enviar video</string>
    <string name="enviar_video_large">Escoge y envía el video que desees</string>
    <string name="grabar_video">Grabar video</string>
    <string name="grabar_video_large">Siempre con el móvil en horizontal</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="mi_perfil_large">Nombre, teléfono, email, ...</string>
    <string name="nombre_apellidos">Nombre y apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="fecha_nacimiento">Fecha de nacimiento (dd/mm/aaaa)</string>
    <string name="telefono">Teléfono</string>
    <string name="mail">Cuenta de correo</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="olvidaste_contrasena">¿Olvidaste la contraseña?</string>
    <string name="recordar_contrasena">Restablecer</string>
    <string name="introduzca_correo">Introduzca su dirección de correo electrónico</string>
    <string name="al_continuar_aceptas">Al continuar aceptas también los términos legales y la política de privacidad de Spain in a Day</string>
    <string name="enviar_contrasena">Restablecer contraseña</string>
    <string name="introduce_correo">Introduce tu cuenta de correo</string>
    <string name="subir_video">Subir video</string>
    <string name="titulo">Título</string>
    <string name="categoria">Categoría</string>
    <string name="subcategoria">Subcategoría</string>
    <string name="descripcion_video">Descripción del video...</string>
    <string name="solo_wifi">¡Sólo se subirán videos a través de wifi!</string>
    <string name="aviso">Aviso</string>
    <string name="error">Error</string>
    <string name="mensaje_error_red">Se ha producido un error inesperado, por favor, verifique su conexión a la red de datos</string>
    <string name="mensaje_error_username">La cuenta de correo introducida ya está registrada</string>
    <string name="mensaje_error_cuenta_no_existe">La cuenta de correo introducida no existe en el sistema</string>
    <string name="mensaje_confirmacion_forgot_pass">Se ha enviado un e-mail a su cuenta de correo con las instrucciones para restablecer su contraseña</string>
    <string name="mensaje_video_registrado">Video correctamente registrado en el sistema</string>
    <string name="acepto">Sí, acepto</string>
    <string name="lee_terminos_legales">Debes leer los términos legales</string>
    <string name="terminos_legales">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores. Quo no falli viris intellegam, ut fugit veritus placerat per.
Ius id vidit volumus mandamus, vide veritus democritum te nec, ei eos debet libris consulatu. No mei ferri graeco dicunt, ad cum veri accommodare. Sed at malis omnesque delicata, usu et iusto zzril meliore. Dicunt maiorum eloquentiam cum cu, sit summo dolor essent te. Ne quodsi nusquam legendos has, ea dicit voluptua eloquentiam pro, ad sit quas qualisque. Eos vocibus deserunt quaestio ei.
Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam. Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id, tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.
Eum hinc argumentum te, no sit percipit adversarium, ne qui feugiat persecuti. Odio omnes scripserit ad est, ut vidit lorem maiestatis his, putent mandamus gloriatur ne pro. Oratio iriure rationibus ne his, ad est corrumpit splendide. Ad duo appareat moderatius, ei falli tollit denique eos. Dicant evertitur mei in, ne his deserunt perpetua sententiae, ea sea omnes similique vituperatoribus. Ex mel errem intellegebat comprehensam, vel ad tantas antiopam delicatissimi, tota ferri affert eu nec. Legere expetenda pertinacia ne pro, et pro impetus persius assueverit.
Ea mei nullam facete, omnis oratio offendit ius cu. Doming takimata repudiandae usu an, mei dicant takimata id, pri eleifend inimicus euripidis at. His vero singulis ea, quem euripidis abhorreant mei ut, et populo iriure vix. Usu ludus affert voluptaria ei, vix ea error definitiones, movet fastidii signiferumque in qui</string>
    <string name="empty_string"></string>
</resources>
